hard-gists/9026148/run.log
=== Docker Run Log for 9026148 ===
Started at: Mi 29. Okt 18:16:27 CET 2025

[2025-10-29 18:16:28] START: Running container for 9026148
[2025-10-29 18:16:28] SUCCESS: Container bebf99f01b8d5b9575fa720a17ee9e34fca203624b46a123d3b067507b191136 started for 9026148
=== Container logs for 9026148 ===
  File "/snippet.py", line 84
    print gpx.to_xml()
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9026148 ===
[2025-10-29 18:16:30] INFO: Container bebf99f01b8d5b9575fa720a17ee9e34fca203624b46a123d3b067507b191136 has stopped
